--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -4,24 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joshua Menzies</title>
-  <title>Matthew Sirois</title>
-  <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>
-    <code>Matrix Program</code>
-  </h1>
+  <code>
+    <h1>Flipping Matrix along diagonal</h1>
+  </code>
+  <code>
+    <h2>Matrix One</h2>
+  </code>
+    <div id ="base_Matrix"></div>
   <h2>
-    <code>Matrix Program</code>
+    <h2>Matrix Two</h2>
   </h2>
-  <div id="first_Matrix" class = "matrix"></div>
-  <h2>
-    <code> Reverse Matrix </code>
-  </h2>
-  <div id ="reverse_Matrix" class = "matrix"></div>
-
+  <div id ="reverse_Matrix"></div>
   <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
 </body>
-</html>
+
+
 
 
