--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -14,7 +14,7 @@
     <p> Original Matrix</p>
     <div id="output"></div>
     <p> Reversed Matrix</p>
-    <div id="revoutput"></div>
+    <div id="reversed-output"></div>
   </main>
   <script src="js/app.js"></script>
 </body>
