--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -7,13 +7,11 @@
   <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE -->
 </head>
 <body>
-  <header> 
-    <h1>Matrix Based on User Input & Flipped</h1>
-  </header>
-  <main>
-    <div id="output"></div>
-    <div id="flipped"></div>
-  </main>
+  <div id="container">
+  <h1>Flipping a Matrix Along a Diagonal</h1>
+  <div id="text-one"><h1>Matrices</h1></div>
+  <div id="matrix"></div>
+  </div>
   <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
 </body>
 </html>
